--- a/vintage_winkels.html
+++ b/vintage_winkels.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
         <ul>
-            <li><a href="Fashion en styling.html"> Home</a></li>
+            <li><a href="index.html"> Home</a></li>
             <li><a href="Outfit inspiratie en trends.html"> Inspiratie en trends</a></li>
             <li><a href="Upcyclen.html"> Upcyclen</a></li>
             <li><a href="Vintage winkels.html"> Vintage winkels</a></li>
