--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
     <header>
         <nav>
         <ul>
-            <li><a href="Fashion en styling.html"> Home</a></li>
-            <li><a href="Outfit inspiratie en trends.html"> Inspiratie en trends</a></li>
-            <li><a href="Upcyclen.html"> Upcyclen</a></li>
-            <li><a href="Vintage winkels.html"> Vintage winkels</a></li>
+            <li><a href="index.html"> Home</a></li>
+            <li><a href="outfit_inspiratie_en_trends.html"> Inspiratie en trends</a></li>
+            <li><a href="upcyclen.html"> Upcyclen</a></li>
+            <li><a href="vintage_winkels.html"> Vintage winkels</a></li>
         </ul>
          </nav>
     </header>
     <main>
-        <img src="content/trends_home_banner.png" alt="Grote afbeelding van verschillende modellen" width="100%" height="100%">
         <h1>Home</h1>
+        <section class="banner">
+        <img src="content/trends_home_banner.png" alt="Grote afbeelding van verschillende modellen">
+        </section>
+
         <article>
         <h2>Trends</h2>
         <p>Over het algemeen was er dit seizoen minder gebakken lucht. De meesten van ons houden zich niet bezig met de extremen van mode, maar willen wel een vleugje magie in onze dagelijkse garderobe. In de vorm van een onverwachte sleep, kanten details of gewoon een perfecte pasvorm.
-
         Ontdek hieronder dé trends die herfst/winter 2023 domineren.</p>
     
-        <div>
-        <img src="content/back_to _basics.png" alt="Back to basic fashion trend" width="320px">
-        <img src="content/deconstructie.png" alt="Deconstructie fashion trend" width="320px">
-        <img src="content/curve_appeal.png" alt="Curve appeal fashion trend" width="320px">
+        <div class="afbeeldhome">
+        <img src="content/back_to _basics.png" alt="Back to basic fashion trend">
+        <img src="content/deconstructie.png" alt="Deconstructie fashion trend">
+        <img src="content/curve_appeal.png" alt="Curve appeal fashion trend">
         </div>
     
         <p><a href="Outfit inspiratie en trends.html"> Bekijk</a> alle fashion trends van de herst/winter 2023</p>
@@ -38,10 +40,15 @@
         <p>Bron: https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/</p>
         </article>
 
-        <article>
+        <article class="quote">
+        <h3>"I really want new clothes"</h3>
+        <p>- Me every morning</p>
+        </article>
+
+        <article class="vintagehome">
         <h2>Vintage winkels</h2>
         <div class="winkel">
-        <img src="content/Indianaweg_Amsterdam.jpg" alt="Foto van vintagewinkel" width="320px">
+        <img src="content/Indianaweg_Amsterdam.jpg" alt="Foto van vintagewinkel">
         <p>Ga op avontuur in Amsterdamse vintage scene! Ontdek de vele vintage winkels in Amsterdam die retro, tweedehands en unieke stukken aanbieden en vind verborgen schatten in de stad.</p>
         </div>
         </article>
