--- a/index.html
+++ b/index.html
@@ -33,11 +33,10 @@
                 <img src="content/deconstructie.png" alt="Deconstructie fashion trend">
                 <img src="content/curve_appeal.png" alt="Curve appeal fashion trend">
             </section>
-    
-            <p><a href="Outfit_inspiratie_en_trends.html"> Bekijk</a> alle fashion trends van de herst/winter 2023</p>
-            <p>Bron: https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/</p>
-            <p>Bron: https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/</p>
-            <p>Bron: https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/</p>
+                <p><a href="Outfit_inspiratie_en_trends.html"> Bekijk</a> alle fashion trends van de herst/winter 2023</p>
+            <section class="link">
+                <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen</a></p> 
+            </section>
         </article>
 
         <article class="quote">
@@ -47,14 +46,14 @@
 
         <article class="vintagehome">
             <h2>Vintage winkels</h2>
-                <section class="winkel">
-                    <img src="content/Indianaweg_Amsterdam.jpg" alt="Foto van vintagewinkel">
-                    <p>Ga op avontuur in de Amsterdamse vintage scene! Ontdek de vele vintage winkels in Amsterdam die retro, tweedehands en unieke stukken aanbieden en vind verborgen schatten in de stad.</p>
-                </section>
+            <section class="winkel">
+                <img src="content/Indianaweg_Amsterdam.jpg" alt="Foto van vintagewinkel">
+                <p>Ga op avontuur in de Amsterdamse vintage scene! Ontdek de vele vintage winkels in Amsterdam die retro, tweedehands en unieke stukken aanbieden en vind verborgen schatten in de stad.</p>
+            </section>
         </article>
     </main>
         <footer>
-            <p>Bron banner: https://www.glamour.com/story/2023-style-trends</p>
+            <p> <a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
         </footer>
 </body>
 </html>
