--- a/Upcyclen.html
+++ b/Upcyclen.html
@@ -28,7 +28,7 @@
             <section class="upcyclen">
                 <video controls autoplay
                 src="content/tas_van_badstof.MOV"></video>
-                <p>Heb jij nog een oude stof liggen? Hier kan je gemakkelijk een tas van maken. Een tas maken is perfect voor beginners. Het is erg gemakkelijk. Ook foutjes zie je niet goed bij het eindresultaat. <br><br>In winkels zie je ze namelijk overal: katoenen tassen. Handig om mee te nemen voor tijdens het shoppen of als je boodschappen gaat doen. En natuurlijk kun je er eentje kopen in de winkel, maar het is nog veel leuker om er eentje te ontwerpen.</p>
+                <p>Heb jij nog een oude stof liggen? Hier kan je gemakkelijk een tas van maken. Een tas maken is perfect voor beginners. Het is erg gemakkelijk. Ook foutjes zie je niet goed bij het eindresultaat. In winkels zie je ze namelijk overal: katoenen tassen. Handig om mee te nemen voor tijdens het shoppen of als je boodschappen gaat doen. En natuurlijk kun je er eentje kopen in de winkel, maar het is nog veel leuker om er eentje te ontwerpen.</p>
             </section>
         </article>
 
@@ -37,7 +37,7 @@
             <section class="upcyclen">
                 <video controls autoplay
                 src="content/cropped_top.MOV"></video>
-                <p>Je kleren een nieuw leven inblazen door middel van deze DIY. Je kunt gemakkelijk van een oud shirt/ blouse een cropped top maken. Hoe leuk is dit ook voor de zomerse dagen?! Je kunt ook gaan vintage shoppen. In vintage winkels kom je allemaal kleding tegen die jij kan gaan oppimpen. <br><br>De eerste stap is om het shirt af te knippen op de gewenste lengte, neem 1 centimeter speling. Deze centimeter vouw je om naar binnen en zet je vast met spelden. Hierdoor blijft de rand mooi omgevouwen. Nu kan je gaan stikken met de naaimachine! En klaar is kees!</p>
+                <p>Je kleren een nieuw leven inblazen door middel van deze DIY. Je kunt gemakkelijk van een oud shirt/ blouse een cropped top maken. Hoe leuk is dit ook voor de zomerse dagen?! Je kunt ook gaan vintage shoppen. In vintage winkels kom je allemaal kleding tegen die jij kan gaan oppimpen. De eerste stap is om het shirt af te knippen op de gewenste lengte, neem 1 centimeter speling. Deze centimeter vouw je om naar binnen en zet je vast met spelden. Hierdoor blijft de rand mooi omgevouwen. Nu kan je gaan stikken met de naaimachine! En klaar is kees!</p>
             </section>
         </article>
 
@@ -47,7 +47,7 @@
         </article>
     </main>
         <footer>
-            <p>Bron banner: https://www.vogue.com/article/</p>
+            <p> <a href="https://www.vogue.com/article/all-the-street-style-trends-from-the-spring-2023-shows">Bron banner</a></p>
         </footer>
 </body>
 </html>
