--- a/outfit_inspiratie_en_trends.html
+++ b/outfit_inspiratie_en_trends.html
@@ -27,73 +27,80 @@
             <h2>Dit zijn de grootste trends van herfst/winter 2023</h2>
             <p>Over het algemeen was er dit seizoen minder gebakken lucht. De meesten van ons houden zich niet bezig met de extremen van mode, maar willen wel een vleugje magie in onze dagelijkse garderobe. In de vorm van een onverwachte sleep, kanten details of gewoon een perfecte pasvorm.
             Ontdek hieronder een paar trends die herfst/winter 2023 domineren.</p>
-            <section class="button">
-                <button>Upcyclen</button>
-            </section>
         </article>
 
         <section class="drie_rij">
-            <article>
-                <h3>Trend 1: Stille luxe</h3>
-                <br>
-                <img src="content/stille_luxe_outfit.png" alt="Een vrouw gekleed in een luxe outfit">
-                <p>Lydia Tár mag dan een fictief personage zijn, ze is een bonafide modemuze. In korte tijd werd Tár synoniem voor een soort mondig minimalisme, voornamelijk gebaseerd op (monochrome) tailoring (zie The Row en Proenza Schouler), dat volledig in lijn is met het instinct van ontwerpers om zaken strakker aan te pakken en zich te richten op de praktijk. Broekpakken en grote jassen zonder poespas, maar elegant en essentieel voor het creëren van een balans tussen werk en privé. <br><br>Bron: https://nl.pinterest.com/pin/640003797058925650/</p>
-            </article>
+            <section class="link">
+                <article>
+                    <h3>Trend 1: Stille luxe</h3>
+                    <img src="content/stille_luxe_outfit.png" alt="Een vrouw gekleed in een luxe outfit">
+                    <a href="https://nl.pinterest.com/pin/640003797058925650/"> Bron</a>
+                    <p>Lydia Tár mag dan een fictief personage zijn, ze is een bonafide modemuze. In korte tijd werd Tár synoniem voor een soort mondig minimalisme, voornamelijk gebaseerd op (monochrome) tailoring (zie The Row en Proenza Schouler), dat volledig in lijn is met het instinct van ontwerpers om zaken strakker aan te pakken en zich te richten op de praktijk. Broekpakken en grote jassen zonder poespas, maar elegant en essentieel voor het creëren van een balans tussen werk en privé.</p>
+                </article>
 
-            <article>
-                <h3>Trend 2: Hypervrouwelijk</h3>
-                <br>
-                <img src="content/hyper_vrouwelijk.jpg" alt="mevrouw gekleed in een lingeriebody">
-                <p>Lingerielooks kwamen tevoorschijn om een hypervrouwelijk element toe te voegen aan een seizoen waarin het pak centraal staat. De eenvoud van de grunge slipdress blijft overheersen, maar ontwerpers onderzochten ook een soort BUtterfield 8-achtige zwoelheid met kanten versieringen. <br> <br> Bron: https://nl.pinterest.com/pin/901705156625483192/</p>
-            </article>
+                <article>
+                    <h3>Trend 2: Hypervrouwelijk</h3>
+                    <img src="content/hyper_vrouwelijk.jpg" alt="mevrouw gekleed in een lingeriebody">
+                    <a href="https://nl.pinterest.com/pin/901705156625483192/">Bron</a>
+                    <p>Lingerielooks kwamen tevoorschijn om een hypervrouwelijk element toe te voegen aan een seizoen waarin het pak centraal staat. De eenvoud van de grunge slipdress blijft overheersen, maar ontwerpers onderzochten ook een soort BUtterfield 8-achtige zwoelheid met kanten versieringen.</p>
+                </article>
 
-            <article>
-                <h3>Trend 3: Back to basics</h3>
-                <br>
-                <img src="content/back_to_basic_trend.png" alt="Basic outfit">
-                <p>De rush van de modewereld naar het minimalisme maakt deel uit van een grotere herwaardering van de klassieke garderobe. Eenvoud is daarbij het toverwoord. Voornamelijk de preppy meets street-esthetiek wint terrein, met modehuizen als Gucci, Miu Miu en Valentino die de leiding nemen. <br><br> Bron: https://nl.pinterest.com/pin/774124928508060/</p>
-            </article>
+                <article>
+                    <h3>Trend 3: Back to basics</h3>
+                    <img src="content/back_to_basic_trend.png" alt="Basic outfit">
+                    <a href="https://nl.pinterest.com/pin/774124928508060/">Bron</a>
+                    <p>De rush van de modewereld naar het minimalisme maakt deel uit van een grotere herwaardering van de klassieke garderobe. Eenvoud is daarbij het toverwoord. Voornamelijk de preppy meets street-esthetiek wint terrein, met modehuizen als Gucci, Miu Miu en Valentino die de leiding nemen.</p>
+                </article>
+            </section>
         </section>
 
         <article class="kop_inspiratie">
             <h2>Outfit inspiratie</h2>
-            <p>Heb jij ook iedere dag moeite om de leukste outfits samen te stellen? Wat lekker zit en waar je je lekker in voelt. <br> Natuurlijk niet geheel onbelangrijk dat je straalt in jouw outfit. Vindt hier de allerleukste inspiratie voor outfitjes!</p>
+            <p>Heb jij ook iedere dag moeite om de leukste outfits samen te stellen? Wat lekker zit en waar je je lekker in voelt. Natuurlijk niet geheel onbelangrijk dat je straalt in jouw outfit. Vindt hier de allerleukste inspiratie voor outfitjes!</p>
         </article>
 
         <article class="trend_inspiratie">
-            <h3>Kleurrijke outfit</h3>
-            <section class="upcyclen">
-                <img src="content/kleurrijke_outfit.png" alt="Kleurrijke outfit">
-                <P>Ga voor een kleurrijke outfit in de herst! Van kleur wordt iedereen een beetje vrolijker tijdens het deprimerende weer. Kleur en demin gaan erg goed samen. Als je een minder kleurrijke outfit wilt, kan je een kleurrijke trui ook combineren met een grijze/zwarte broek of rok. <br><br>Bron: https://nl.pinterest.com/pin/862791241135136345/</P>
+            <section class="link_twee">
+                <h3>Kleurrijke outfit</h3>
+                <section class="upcyclen">
+                    <img src="content/kleurrijke_outfit.png" alt="Kleurrijke outfit">
+                    <P>Ga voor een kleurrijke outfit in de herst! Van kleur wordt iedereen een beetje vrolijker tijdens het deprimerende weer. Kleur en demin gaan erg goed samen. Als je een minder kleurrijke outfit wilt, kan je een kleurrijke trui ook combineren met een grijze/zwarte broek of rok. <a href="https://nl.pinterest.com/pin/862791241135136345/">Bron</a></P>
+                </section>
             </section>
         </article>
 
         <article class="trend_inspiratie">
-            <h3>Comfi outfit</h3>
-            <section class="upcyclen">
-                <img src="content/comfy_outfit.png" alt="comfortabele outfit">
-                <p>Heb je een lange schooldag? En geen zin om een spijkerbroek aan te doen? Dan is deze comfi outfit geschikt voor jou! Ook zie je er dan nog eens erg stijlvol uit. <br> <br> Bron: https://nl.pinterest.com/pin/862791241132764791/</p>
+            <section class="link_twee">
+                <h3>Comfi outfit</h3>
+                <section class="upcyclen">
+                    <img src="content/comfy_outfit.png" alt="comfortabele outfit">
+                    <p>Heb je een lange schooldag? En geen zin om een spijkerbroek aan te doen? Dan is deze comfi outfit geschikt voor jou! Ook zie je er dan nog eens erg stijlvol uit. <a href="https://nl.pinterest.com/pin/862791241132764791/">Bron</a></p>
+                </section>
             </section>
         </article>
         
         <article class="trend_inspiratie">
-            <h3>Modern cowgril outfit</h3>
-            <section class="upcyclen">
-                <img src="content/outfit_blouse.png" alt="Oufit met een blouse">
-                <p>Deze outfit is mega leuk te combineren met cowboy boots. Dat maakt de look helemaal af. Ben jij niet zo'n fan van het cowgril lookje? Dan kan je de blouse ook combineren met een blazer/ leren jack en stoeren sneakers eronder. <br><br> Bron: https://nl.pinterest.com/pin/862791241135112668/</p>
+            <section class="link_twee">
+                <h3>Modern cowgril outfit</h3>
+                <section class="upcyclen">
+                    <img src="content/outfit_blouse.png" alt="Oufit met een blouse">
+                    <p>Deze outfit is mega leuk te combineren met cowboy boots. Dat maakt de look helemaal af. Ben jij niet zo'n fan van het cowgril lookje? Dan kan je de blouse ook combineren met een blazer/ leren jack en stoeren sneakers eronder. <a href="https://nl.pinterest.com/pin/862791241135112668/">Bron</a></p>
+                </section>
             </section>
         </article>
     
         <article class="trend_inspiratie">
-            <h3>Street style outfit</h3>
-            <section class="upcyclen">
-                <img src="content/outfit_blauwe_trui.png" alt="outfit met een blauwe trui">
-                <p>A touch of blue! Deze outfit is perfect voor een schooldag. Het zit comfortabel, en ziet er ook nog eens leuk uit. Deze outfit kan je combineren met een stoere sneaker. <br><br>Bron: https://nl.pinterest.com/pin/862791241134986021/</p>
+            <section class="link_twee">
+                <h3>Street style outfit</h3>
+                <section class="upcyclen">
+                    <img src="content/outfit_blauwe_trui.png" alt="outfit met een blauwe trui">
+                    <p>A touch of blue! Deze outfit is perfect voor een schooldag. Het zit comfortabel, en ziet er ook nog eens leuk uit. Deze outfit kan je combineren met een stoere sneaker. <a href="https://nl.pinterest.com/pin/862791241134986021/">Bron</a></p>
+                </section>
             </section>
         </article>
     </main>
         <footer>
-            <p>Bron banner: https://www.vogue.com/article/copenhagen-street-style-spring-trends</p>
+            <p> <a href="https://www.vogue.com/article/copenhagen-street-style-spring-trends">Bron banner</a></p>
         </footer>
 </body>
 </html>
