--- a/Upcyclen.html
+++ b/Upcyclen.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcyclen</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -26,18 +28,25 @@
         <article>
             <h2>Tas maken</h2>
             <section class="upcyclen">
-                <video controls autoplay
-                src="content/tas_van_badstof.MOV"></video>
-                <p>Heb jij nog een oude stof liggen? Hier kan je gemakkelijk een tas van maken. Een tas maken is perfect voor beginners. Het is erg gemakkelijk. Ook foutjes zie je niet goed bij het eindresultaat. In winkels zie je ze namelijk overal: katoenen tassen. Handig om mee te nemen voor tijdens het shoppen of als je boodschappen gaat doen. En natuurlijk kun je er eentje kopen in de winkel, maar het is nog veel leuker om er eentje te ontwerpen.</p>
+                <video controls autoplay src="content/tas_van_badstof.MOV"></video>
+                <p>Heb jij nog een oude stof liggen? Hier kan je gemakkelijk een tas van maken. Een tas maken is perfect
+                    voor beginners. Het is erg gemakkelijk. Ook foutjes zie je niet goed bij het eindresultaat. In
+                    winkels zie je ze namelijk overal: katoenen tassen. Handig om mee te nemen voor tijdens het shoppen
+                    of als je boodschappen gaat doen. En natuurlijk kun je er eentje kopen in de winkel, maar het is nog
+                    veel leuker om er eentje te ontwerpen.</p>
             </section>
         </article>
 
         <article>
             <h2>Cropped top maken</h2>
             <section class="upcyclen">
-                <video controls autoplay
-                src="content/cropped_top.MOV"></video>
-                <p>Je kleren een nieuw leven inblazen door middel van deze DIY. Je kunt gemakkelijk van een oud shirt/ blouse een cropped top maken. Hoe leuk is dit ook voor de zomerse dagen?! Je kunt ook gaan vintage shoppen. In vintage winkels kom je allemaal kleding tegen die jij kan gaan oppimpen. De eerste stap is om het shirt af te knippen op de gewenste lengte, neem 1 centimeter speling. Deze centimeter vouw je om naar binnen en zet je vast met spelden. Hierdoor blijft de rand mooi omgevouwen. Nu kan je gaan stikken met de naaimachine! En klaar is kees!</p>
+                <video controls autoplay src="content/cropped_top.MOV"></video>
+                <p>Je kleren een nieuw leven inblazen door middel van deze DIY. Je kunt gemakkelijk van een oud shirt/
+                    blouse een cropped top maken. Hoe leuk is dit ook voor de zomerse dagen?! Je kunt ook gaan vintage
+                    shoppen. In vintage winkels kom je allemaal kleding tegen die jij kan gaan oppimpen. De eerste stap
+                    is om het shirt af te knippen op de gewenste lengte, neem 1 centimeter speling. Deze centimeter vouw
+                    je om naar binnen en zet je vast met spelden. Hierdoor blijft de rand mooi omgevouwen. Nu kan je
+                    gaan stikken met de naaimachine! En klaar is kees!</p>
             </section>
         </article>
 
@@ -46,8 +55,10 @@
             <p>- Bente Visschers</p>
         </article>
     </main>
-        <footer>
-            <p> <a href="https://www.vogue.com/article/all-the-street-style-trends-from-the-spring-2023-shows">Bron banner</a></p>
-        </footer>
+    <footer>
+        <p> <a href="https://www.vogue.com/article/all-the-street-style-trends-from-the-spring-2023-shows">Bron
+                banner</a></p>
+    </footer>
 </body>
+
 </html>
