--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="nl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fashion & styling</title>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -19,23 +21,25 @@
     </header>
     <main>
         <h1>Home</h1>
-            <section class="banner">
-                <img src="content/trends_home_banner.png" alt="Grote afbeelding van verschillende modellen">
-            </section>
+        <section class="banner">
+            <img src="content/trends_home_banner.png" alt="Grote afbeelding van verschillende modellen">
+        </section>
 
         <article>
             <h2>Trends</h2>
-            <p>Over het algemeen was er dit seizoen minder gebakken lucht. De meesten van ons houden zich niet bezig met de extremen van mode, maar willen wel een vleugje magie in onze dagelijkse garderobe. In de vorm van een onverwachte sleep, kanten details of gewoon een perfecte pasvorm.
-            Ontdek hieronder dé trends die herfst/winter 2023 domineren.</p>
-    
+            <p>Over het algemeen was er dit seizoen minder gebakken lucht. De meesten van ons houden zich niet bezig met
+                de extremen van mode, maar willen wel een vleugje magie in onze dagelijkse garderobe. In de vorm van een
+                onverwachte sleep, kanten details of gewoon een perfecte pasvorm.
+                Ontdek hieronder dé trends die herfst/winter 2023 domineren.</p>
+
             <section class="afbeeldhome">
                 <img src="content/back_to_basics.png" alt="Back to basic fashion trend">
                 <img src="content/deconstructie.png" alt="Deconstructie fashion trend">
                 <img src="content/curve_appeal.png" alt="Curve appeal fashion trend">
             </section>
-                <p><a href="Outfit_inspiratie_en_trends.html"> Bekijk</a> alle fashion trends van de herst/winter 2023</p>
+            <p><a href="Outfit_inspiratie_en_trends.html"> Bekijk</a> alle fashion trends van de herst/winter 2023</p>
             <section class="link">
-                <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen</a></p> 
+                <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen</a></p>
             </section>
         </article>
 
@@ -48,12 +52,14 @@
             <h2>Vintage winkels</h2>
             <section class="winkel">
                 <img src="content/Indianaweg_Amsterdam.jpg" alt="Foto van vintagewinkel">
-                <p>Ga op avontuur in de Amsterdamse vintage scene! Ontdek de vele vintage winkels in Amsterdam die retro, tweedehands en unieke stukken aanbieden en vind verborgen schatten in de stad.</p>
+                <p>Ga op avontuur in de Amsterdamse vintage scene! Ontdek de vele vintage winkels in Amsterdam die
+                    retro, tweedehands en unieke stukken aanbieden en vind verborgen schatten in de stad.</p>
             </section>
         </article>
     </main>
-        <footer>
-            <p> <a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
-        </footer>
+    <footer>
+        <p> <a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+    </footer>
 </body>
+
 </html>
