--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
         </article>
     </main>
     <footer>
-        <p> <a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+        <section class="link_twee">
+            <p><a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+            <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen overige tekst</a></p>
+        </section>
     </footer>
 </body>
 
