--- a/vintage_winkels.html
+++ b/vintage_winkels.html
@@ -56,8 +56,10 @@
         </section>
     </main>
     <footer>
-        <p><a href="https://www.vogue.com/article/the-8-street-style-trends-from-the-copenhagen-spring-2024-shows">Bron
-                banner</a></p>
+        <section class="link_twee">
+            <p><a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+            <p><a href="https://www.saltinourhair.com/nl/nederland/vintage-winkels-amsterdam/">Bronnen overige tekst</a></p>
+        </section>
     </footer>
 </body>
 
