--- a/outfit_inspiratie_en_trends.html
+++ b/outfit_inspiratie_en_trends.html
@@ -127,7 +127,10 @@
         </article>
     </main>
     <footer>
-        <p> <a href="https://www.vogue.com/article/copenhagen-street-style-spring-trends">Bron banner</a></p>
+        <section class="link_twee">
+            <p><a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+            <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen overige tekst</a></p>
+        </section>
     </footer>
 </body>
 
