Aller laatste update

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <section class="link_twee">
             <p><a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
             <p><a href="https://www.vogue.nl/fashion/trends/trends-herfst-winter-2023/">Bronnen overige tekst</a></p>
+            <p><a href="https://week-endsin.com/amsterdam/nl/leukste-vintage-winkels-in-amsterdam/">Bron afbeelding winkel</a></p>
         </section>
     </footer>
 </body>
