--- a/upcyclen.html
+++ b/upcyclen.html
@@ -57,7 +57,7 @@
     </main>
     <footer>
         <section class="link_twee">
-            <p><a href="https://www.glamour.com/story/2023-style-trends">Bron banner</a></p>
+            <p><a href="https://www.vogue.com/article/all-the-street-style-trends-from-the-spring-2023-shows">Bron banner</a></p>
         </section>
     </footer>
 </body>
